Cycles doesn't update viewport rendering when Is Shadow Ray is used as a mix factor the first time #46045

Closed
opened 2015-09-07 20:41:05 +02:00 by Matt Heimlich · 7 comments

System Information
Win 7 x64

Blender Version
Broken in master as of Sept 9 2015

Short description of error
When adding a material in your scene that uses the Is Shadow Ray light path as a mix factor, viewport rendering doesn't update correctly. Stopping and restarting rendering causes it to update correctly, and it updates correctly in all cases after the original error.

Exact steps for others to reproduce the error
Doesn't seem to work with a saved/loaded file, sorry.

My steps to recreate are: create a new file, create a sphere on top of a plane, add sun lamp, start preview rendering, add material to sphere with diffuse and transparent mixed via Is Shadow Ray.

Image one shows result after above steps, image two shows the result after hitting shift + z twice

{F231257}cycleserror2.PNG

**System Information** Win 7 x64 **Blender Version** Broken in master as of Sept 9 2015 **Short description of error** When adding a material in your scene that uses the Is Shadow Ray light path as a mix factor, viewport rendering doesn't update correctly. Stopping and restarting rendering causes it to update correctly, and it updates correctly in all cases after the original error. **Exact steps for others to reproduce the error** Doesn't seem to work with a saved/loaded file, sorry. My steps to recreate are: create a new file, create a sphere on top of a plane, add sun lamp, start preview rendering, add material to sphere with diffuse and transparent mixed via Is Shadow Ray. Image one shows result after above steps, image two shows the result after hitting shift + z twice {[F231257](https://archive.blender.org/developer/F231257/cycleserror1.PNG)}![cycleserror2.PNG](https://archive.blender.org/developer/F231259/cycleserror2.PNG)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Matt Heimlich 2015-09-07 20:41:05 +02:00
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I assume this is another case of the integrator not updating, after inserting the transparent shader. See optimization in Integrator::device_update() for transparent shadows.

I assume this is another case of the integrator not updating, after inserting the transparent shader. See optimization in Integrator::device_update() for transparent shadows.

This issue was referenced by 0e12228bd9

This issue was referenced by 0e12228bd9976d58068879c80e7bb2bfde22b4f7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@5942b4e442

This issue was referenced by blender/cycles@5942b4e442d511921a92fd898989bd594f8858cb
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46045
No description provided.