Fix T46045: Missing viewport update when adding transparent shader to material